--- a/main/ecs-config/beekeeper-path-scheduler-config.yml
+++ b/main/ecs-config/beekeeper-path-scheduler-config.yml
@@ -2,10 +2,9 @@ spring.datasource:
   url: jdbc:mysql://${db_endpoint}/beekeeper?useSSL=false
   username: ${db_username}
 properties:
-  scheduler-delay-ms: ${scheduler_delay_ms}
-  dry-run-enabled: ${dry_run_enabled}
+  apiary.queue-url: ${queue}
 graphite:
   enabled: ${graphite_enabled}
   host: ${graphite_host}
-  port: ${graphite_port}
   prefix: ${graphite_prefix}
+  port: ${graphite_port}
