--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ env:
 
 # Install terraform
 before_install:
-  - curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.12.19/terraform_0.12.19_linux_amd64.zip
+  - curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.12.18/terraform_0.12.19_linux_amd64.zip
   - unzip /tmp/terraform.zip -d /tmp
   - mkdir -p ~/bin
   - mv /tmp/terraform ~/bin
   - export PATH="~/bin:$PATH"
   - export TF_INPUT=false
+  - export AWS_DEFAULT_REGION="us-east-1"
 
 script:
   - cd $TERRAFORM_DIR
