--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,16 @@
 name: Terraform Validation
 
-on: [push]
+on: [ push ]
 
 jobs:
   test:
-    name: Verify Terraform is valid
+    name: Verify Terraform is valid for ${{ matrix.terraform_dir }}
     runs-on: ubuntu-18.04
+    timeout-minutes: 5
+    container:
+      image: hashicorp/terraform:0.12.19
+    env:
+      AWS_DEFAULT_REGION: us-east-1
     strategy:
       matrix:
         terraform_dir: [main, lambda]
