--- a/files/beekeeper-path-scheduler-config.yml
+++ b/files/beekeeper-path-scheduler-config.yml
@@ -3,8 +3,4 @@ spring.datasource:
   username: ${db_username}
 properties:
   apiary.queue-url: ${queue}
-graphite:
-  enabled: ${graphite_enabled}
-  host: ${graphite_host}
-  prefix: ${graphite_prefix}
-  port: ${graphite_port}
+${graphite-config}
