Changed hyphen to underscore

--- a/files/beekeeper-metadata-cleanup-config.yml
+++ b/files/beekeeper-metadata-cleanup-config.yml
@@ -4,5 +4,5 @@ spring.datasource:
 properties:
   scheduler-delay-ms: ${scheduler_delay_ms}
   dry-run-enabled: ${dry_run_enabled}
-  metastore-uri: ${metastore-uri}
+  metastore-uri: ${metastore_uri}
 ${graphite_config}
