--- a/files/beekeeper-scheduler-apiary-config.yml
+++ b/files/beekeeper-scheduler-apiary-config.yml
@@ -1,5 +1,5 @@
 spring.datasource:
-  url: jdbc:mysql://${db_endpoint}/beekeeper?useSSL=false
+  url: jdbc:mysql://${db_endpoint}/${db_name}?useSSL=false
   username: ${db_username}
 properties:
   apiary.queue-url: ${queue}
