update flow to same as datalake

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,24 @@
-name: Terraform Validation
+name: Terraform CI
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   test:
-    name: Verify Terraform is valid for ${{ matrix.terraform_dir }}
+    name: Terraform Checks
     runs-on: ubuntu-18.04
-    timeout-minutes: 5
-    container:
-      image: hashicorp/terraform:0.12.29
-    env:
-      AWS_DEFAULT_REGION: us-east-1
-
     steps:
-      - uses: actions/checkout@v1
-      - name: "Terraform Init"
-        run: terraform init
-      - name: "Validate Terraform"
-        run: terraform validate
+    - name: Check out code  
+      uses: actions/checkout@v2
+
+    - name: Setup
+      uses: hashicorp/setup-terraform@v1.2.1
+      with:
+        terraform_version: 0.12.29
+
+    - name: Init
+      run: terraform init -backend=false
+
+    - name: Validate
+      run: terraform validate
+      env: 
+        AWS_DEFAULT_REGION: us-west-1
