Add new properties to scheduler config

--- a/files/beekeeper-scheduler-apiary-config.json
+++ b/files/beekeeper-scheduler-apiary-config.json
@@ -4,6 +4,8 @@
     "username": "${db_username}"
   },
   "properties": {
-    "apiary.queue-url": "${queue}"
+    "apiary.queue-url": "${queue}",
+    "dry-run-enabled": "${dry_run_enabled}",
+    "metastore-uri": "${metastore_uri}"
   }${graphite_config}
 }
